[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-miner"
version = "0.2.0"
description = "Per-shot win rate prediction system for tennis"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
cv = [
    "courtvisionpython>=0.1.0",
    "aiohttp>=3.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
tennis-miner = "main:main"

[tool.setuptools.packages.find]
include = ["tennis_miner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
